# OwnBot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  README_EN.md  milvus-standalone-docker-compose.yml  pyproject.toml  test_gateway.py  test_milvus.py  test_retrieval.py
docs/: DEVELOPMENT.md  mcp_code_walkthrough.md  mcp_config_example.json  mcp_integration.md  mcp_quickstart.md
ownbot/: __init__.py  __main__.py  agent.py  bus.py  config.py  constants.py  exceptions.py  llm.py  types.py
ownbot/agent/: __init__.py  context.py  loop.py  memory.py
ownbot/agent/tools/: __init__.py  base.py  filesystem.py  registry.py  shell.py  web.py
ownbot/bus/: __init__.py  events.py  queue.py
ownbot/channels/: __init__.py  base.py  manager.py  telegram.py  whatsapp.py
ownbot/cli/: __init__.py  commands.py
ownbot/config/: __init__.py  loader.py  paths.py  schema.py
ownbot/mcp/: __init__.py  client.py  tools.py
ownbot/providers/: __init__.py  base.py  litellm_provider.py  registry.py
ownbot/retrieval/: __init__.py  retriever.py
ownbot/session/: __init__.py  base.py  manager.py
ownbot/skills/: __init__.py  loader.py  models.py
ownbot/skills/clawhub/: SKILL.md
ownbot/skills/translate/: SKILL.md
ownbot/skills/weather/: SKILL.md
ownbot/utils/: __init__.py  logger.py
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
whatsapp-bridge/: package-lock.json  package.json  server.js
