[project]
name = "ownbot"
version = "0.0.1"
description = "OwnBot: A learning-oriented AI Agent framework implementing ReAct architecture"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "agent", "llm", "react", "chatbot", "telegram", "whatsapp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "typer>=0.12.3,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.2,<1.0.0",
    "aiohttp>=3.9.1,<4.0.0",
    "websockets>=12.0,<14.0",
    "rich>=13.0.0,<14.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pymilvus>=2.6.0,<3.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "torch>=2.6.0",
    "mcp>=1.12.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "mypy>=1.10.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.32.0",
]

[project.scripts]
ownbot = "ownbot.cli:app"

[project.urls]
Homepage = "https://github.com/schhaohao/OwnBot"
Documentation = "https://github.com/schhaohao/OwnBot#readme"
Repository = "https://github.com/schhaohao/OwnBot"
Issues = "https://github.com/schhaohao/OwnBot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ownbot"]

# =============================================================================
# pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=ownbot",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=10",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (skip in fast mode)",
    "llm: Tests that call LLM APIs (expensive)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "telegram.ext.*",
    "pymilvus.*",
    "sentence_transformers.*",
    "torch.*",
    "websockets.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "PERF",# Perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements in function
    "PLR2004", # Magic value used in comparison
    "PLW2901", # `for` loop variable overwritten by assignment
    "UP040",  # Type statement not yet supported by mypy
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ownbot"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D",      # Docstring conventions (tests don't need docstrings)
    "PLR2004", # Magic values in tests are fine
    "S101",   # Assert statements in tests
]
"ownbot/__init__.py" = ["D104"]
"ownbot/**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["ownbot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
    "ownbot/cli/commands.py",  # CLI is hard to test, mostly thin wrapper
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
ignore_errors = true
fail_under = 10

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
